qualidade-do-motor

--- a/main.css
+++ b/main.css
@@ -8,8 +8,8 @@ img.foto {
     height: 890px;
     width: 800px;
     opacity: 80%;
-    position: relative;
-        left: 2%;
+    position: absolute;
+        left: 35%;
     border-radius: 10%;
         
 }
@@ -19,21 +19,22 @@ img.foto {
     height: 30px;
     width: 400px;
     position: absolute;
-        left: 10%;
+        left: 36%;
         top: 10%;
     z-index: 4;
     background-color: rgb(255, 20, 20);
+    color: antiquewhite;
 }
 .bot2 {
     border-radius: 20px;
     height: 30px;
     width: 400px;
     position: absolute;
-        left: 50%;
+        left: 36%;
         top: 20%;
-        left: 10%;
     z-index: 4;
-    background-color: rgb(126, 126, 126);
+    background-color: rgb(255, 20, 20);
+    color: antiquewhite;
 }
 
 .bot3 {
@@ -41,20 +42,22 @@ img.foto {
     height: 30px;
     width: 400px;
     position: absolute;
-        left: 50%;
+        left: 36%;
         top: 30%;
-        left: 10%;
     z-index: 4;
-    background-color: rgb(126, 126, 126);}
+    background-color:rgb(255, 20, 20);
+    color: antiquewhite;
+}
 
 img.carro {
     height: 300px;
     width: 300px;
     position: absolute;
-        left: 58%;
+        left: 60%;
         top: 5%;
     border-radius: 10%;
     z-index: 1;
+    color: antiquewhite;
 }
 
 .bot4 {
@@ -62,11 +65,11 @@ img.carro {
     height: 30px;
     width: 500px;
     position: absolute;
-        left: 50%;
+        left: 36%;
         top: 40%;
-        left: 10%;
     z-index: 4;
     background-color: rgb(26, 5, 143);
+    color: antiquewhite;
 }
 
 .bot5 {
@@ -74,21 +77,20 @@ img.carro {
     height: 30px;
     width: 500px;
     position: absolute;
-        left: 50%;
+        left: 36%;
         top: 50%;
-        left: 10%;
     z-index: 4;
     background-color: rgb(26, 5, 143);
+    color: antiquewhite;
 }
 
 .bot6 {
     border-radius: 20px;
     height: 30px;
-    width: 250px;
+    width: 500px;
     position: absolute;
-        left: 50%;
+        left: 36%;
         top: 60%;
-        left: 10%;
     z-index: 4;
     background-color: rgb(26, 5, 143);
     color: antiquewhite;
@@ -98,7 +100,7 @@ img.carro {
     height: 200px;
     width: 500px;
     position: absolute;
-        left: 10%;
+        left: 36%;
         top: 70%;
     border-radius: 10%;
     z-index: 1;
